# andromeda-dashboard

./: .gitignore  LGTM.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AcceleratorHourLedger.tsx  AcceleratorWindowPlanner.tsx  ActionRunlistPanel.tsx  ActiveBurnMeter.tsx  ActivityFeed.tsx  AllocationConstellationPanel.tsx  AllocationWasteLedger.tsx  BackfillPanel.tsx  BackfillRecipeBuilder.tsx  BackfillSlotBoard.tsx  CapacityLossLedger.tsx  CheckpointBudgetPanel.tsx  CheckpointSentinelPanel.tsx  ComputeCommitmentPanel.tsx  ContentionPanel.tsx  CudaTelemetryPanel.tsx  DataFreshnessPanel.tsx  DataStagingPlanner.tsx  DependencyChainAuditor.tsx  DependencyRadarPanel.tsx  EfficiencyPanel.tsx  EnvironmentPreflightPanel.tsx  ExecutiveCommand.tsx  ExitCodeForensics.tsx  ExperimentContinuityPanel.tsx  ExperimentRunwayPanel.tsx  FleetMap.tsx  (+80 more)
scripts/: andromeda_probe.sh  check_loc.py  dev.sh
src/andromeda_dashboard/: __init__.py  api.py  cache.py  cli.py  collector.py  commands.py  config.py  insights.py  models.py  normalizers.py  snapshot.py  ssh.py  storage.py  telemetry.py  views.py
tests/: conftest.py  test_api.py  test_collector.py  test_live_smoke.py  test_loc_guard.py  test_normalizers.py
tests/fixtures/: assoc.txt  history.json  nodes.json  partitions.json  qos.txt  queue.json  sdiag.txt  sinfo.json  sprio.txt  starts.json  storage.txt
(+206 files in other folders)
